# run-hy8

./: .gitattributes  .gitignore  HY8_PATH.txt  LICENSE  README.md  build_package.bat  example_crossings_roundtrip.hy8  gen-hy8-example.py  install_package.bat  mkdocs.yml  package_and_install.bat  pyproject.toml  repro_attr_error.py  run_hy8_batch_compare.bat  run_tests.bat  sample_project.json  tmp_roundtrip.hy8
.github/workflows/: ci.yml  pages.yml
docs/: CONTRIBUTING.md  agents.md  api.md  headwater_helpers.md  headwater_helpers_plan.md  index.md
scripts/: batch_hy8_compare.py  csv_culvert_demo.py  culvert-list.csv  culvert-results-1943.csv  culvert-results.csv  culvert_demo-from-1d_nwk.py  culvert_demo-from-tuflow.py  demo_hydraulics_wrappers.py  gen-hy8-example.py  hy8_benchmark.py  sample_crossing_compare.py
src/run_hy8/: __init__.py  __main__.py  classes_references.py  cli.py  config.py  executor.py  hy8_path.py  hydraulics.py  models.py  reader.py  results.py  type_helpers.py  units.py  writer.py
src/run_hy8/models/: IMPROVEMENT_SUGGESTIONS.md  __init__.py  base.py  ci.yml  culvert_barrel.py  culvert_crossing.py  flow_definition.py  project.py  roadway_profile.py  tailwater_definition.py
tests/: __init__.py  conftest.py  example_crossings.hy8  hy8_culvert_summary.xlsx  sample_data.py  test_cli.py  test_config_build.py  test_hy8_path.py  test_legacy_regression.py  test_reader.py  test_sample_compare.py  test_validation.py
tests/hy8runner/: README.hy8runner.md  hy8Runner.ipynb  hy8_runner.py  hy8_runner_crossing.py  hy8_runner_culvert.py  hy8_runner_flow.py  pyproject.hy8runner.toml
