[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "run-hy8"
version = "2025.11.19.2"
description = "Windows-only utilities for generating and executing HY-8 projects"
readme = "README.md"
requires-python = ">=3.13"
authors = [{name = "Codex scaffolding"}]
license = "MIT"
license-files = ["LICENSE"]
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = ["build", "pyright", "ruff", "pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"

[tool.black]
line-length = 120
